First official and public version of the chatbot

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="ChatBot.css">
 </head>
 <body>
+    <div class="chatbot-bubble" id="chatbot-bubble" title="Discuter avec UMOD">
+      <svg width="36" height="36" viewBox="0 0 36 36" fill="none">
+        <circle cx="18" cy="18" r="16" fill="#fff"/>
+        <ellipse cx="12" cy="18" rx="3" ry="4" fill="#2bb6a8"/>
+        <ellipse cx="24" cy="18" rx="3" ry="4" fill="#2bb6a8"/>
+        <circle cx="12" cy="18" r="1.2" fill="#fff"/>
+        <circle cx="24" cy="18" r="1.2" fill="#fff"/>
+        <!-- Smiling mouth -->
+        <path d="M14 25 Q18 29 22 25" stroke="#2bb6a8" stroke-width="2" fill="none" stroke-linecap="round"/>
+      </svg>
+    </div>
     <div class="chatbot-container" id="chatbot-container">
         <header class="logo" id="logo">
             <div class="Title-Logo-container">
